--- a/package.json
+++ b/package.json
@@ -103,40 +103,11 @@
     "linc": "node ./scripts/tasks/linc.js",
     "lint": "node ./scripts/tasks/eslint.js",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "test": "cross-env NODE_ENV=development jest",
-    "test-prod": "cross-env NODE_ENV=production jest",
+    "test": "cross-env NODE_ENV=development jest --config ./scripts/jest/config.source.js",
+    "test-prod": "cross-env NODE_ENV=production jest --config ./scripts/jest/config.source.js",
     "flow": "node ./scripts/tasks/flow.js",
     "prettier": "node ./scripts/prettier/index.js write-changed",
     "prettier-all": "node ./scripts/prettier/index.js write",
     "version-check": "node ./scripts/tasks/version-check.js"
-  },
-  "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/scripts/rollup/shims/",
-      "<rootDir>/scripts/bench/"
-    ],
-    "transform": {
-      ".*": "./scripts/jest/preprocessor.js"
-    },
-    "setupFiles": [
-      "./scripts/jest/environment.js"
-    ],
-    "setupTestFrameworkScriptFile": "./scripts/jest/test-framework-setup.js",
-    "testRegex": "/__tests__/.*(\\.js|\\.coffee|[^d]\\.ts)$",
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "node",
-      "coffee",
-      "ts"
-    ],
-    "roots": [
-      "<rootDir>/packages",
-      "<rootDir>/scripts"
-    ],
-    "collectCoverageFrom": [
-      "packages/**/*.js"
-    ],
-    "timers": "fake"
   }
 }
